# rustcorder

./: .gitignore  LICENSE  README.md
cord/: Cargo.toml  README.md  user.config
cord/scripts/: MaryLamb.txt
cord/scripts/temp/: MaryLamb_compiled.txt
cord/src/: main.rs
