[package]
name = "cord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
whisper-rs = { version = "0.12" }
cpal = "0.15"
hound = "3.5"
crossterm = "0.28"
ctrlc = "3.4"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
